# OpenSudoku

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: flake8.yml  github_release.yml  pylint.yml  pypi_deploy.yml  unit_tests.yml
open_sudoku/: sudoku.py
src/open_sudoku/: __init__.py  config.py  custom_itertools.py  debug_rendering.py  sudoku.py
tests/: conftest.py  test_default.py  test_sudoku.py
