[build-system]
requires = ['poetry-core>=1.2.0', 'wheel',]
build-backend = 'poetry.core.masonry.api'


[tool.coverage.run]
branch = true
relative_files = true
omit = [
    '.tox/*',
    'tests/*',
]


[tool.flake8]
max-line-length = 120
extend-ignore = ''  # https://www.flake8rules.com/
max-complexity = 15  # Info: https://en.wikipedia.org/wiki/Cyclomatic_complexity
per-file-ignores = """\
# F401: Ignore "unused" imports
# F403: Ignore star imports
# F405: Ignore names from star imports
__init__.py:F401,F403,F405\
"""


[tool.poetry]
name = 'OpenSudoku'
version = '0.1.0'
description = "An open Python implementation of the famous sudoku puzzle."

packages = [
    {include = "open_sudoku"}
]

authors = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]
maintainers = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]

include = ['CHANGELOG.md', 'LICENSE',]
license = 'MIT'
readme = 'README.md'

homepage = 'https://pypi.org/project/OpenSudoku/'
repository = 'https://github.com/Diapolo10/OpenSudoku'
documentation = 'https://github.com/Diapolo10/OpenSudoku/tree/main/docs'

keywords = [
    'python3',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Typing :: Typed',
]


[tool.poetry.dependencies]
python = '^3.10.0'


[tool.poetry.group.dev.dependencies]
mypy = '^1.10.0'


[tool.poetry.group.linters]
optional = true


[tool.poetry.group.linters.dependencies]
flake8 = '^7.0.0'
flake8-pyproject = '^1.2.3'
pylint = '^3.1.0'


[tool.poetry.group.tests]
optional = true


[tool.poetry.group.tests.dependencies]
coverage = {version = '^7.5.0', extras = ['toml',]}
pytest = '^8.1.2'
pytest-cov = '^5.0.0'
tox = '^4.14.2'
tox-gh-actions = '^3.2.0'


[tool.poetry.urls]
"Tracker" = 'https://github.com/Diapolo10/OpenSudoku/issues'
"Changelog" = 'https://github.com/Diapolo10/OpenSudoku/blob/main/CHANGELOG.md'


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
    # https://vald-phoenix.github.io/pylint-errors/
]


[tool.pytest.ini_options]
minversion = '6.0'
addopts = """
--doctest-modules \
--cov=./ \
--cov-append \
--cov-report html:tests/reports/coverage-html \
--cov-report xml:tests/reports/coverage.xml \
--ignore=docs/
"""
testpaths = [
    'tests',
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310, py311, pypy3
isolated_build = True

[gh-actions]
python =
    3.10: py310
    3.11: py311
    pypy-3.9: pypy3

[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows

[testenv]
passenv = GITHUB_*
deps =
    coverage[toml]
    pytest
    pytest-cov
commands =
    coverage run -m pytest
"""
